# GLM-Architecture-Support-for-Distributed-Llama

./: 7-day-cloud-implementation.md  BUILD_FIX_INSTRUCTIONS.md  CMakeLists.txt  CURRENT_STATUS.md  DIGITALOCEAN_APPLICATION.md  GITHUB_README.md  GLM4_IMPLEMENTATION.md  INTELLECT3_IMPLEMENTATION.md  LAMBDA_LABS_PROPOSAL.md  MASTER_STRATEGY.md  PROJECT_SETUP.md  PROJECT_SUMMARY.md  PYTORCH_CREDITS_APPLICATION.md  README.md  TEMPLATE_GENERAL.md  launch-glm.py  requirements.txt  research.md  researchthroughCloud.md  test-build.sh
src/: app.cpp  llama-cli.cpp  llama-server.cpp  llama.cpp  llamafile-sgemm.cpp  llm-api.cpp  llm-cli.cpp  llm.cpp  main.cpp  nn-core.cpp  nn-cpu-ops.cpp  nn-cpu.cpp  nn-executor.cpp  nn-network.cpp  nn-quantize.cpp  nn-quants.cpp  tokenizer-cli.cpp  tokenizer-lib.cpp  tokenizer.cpp
src/glm/: distributed-moe.cpp  expert-cache.cpp  expert-network.cpp  glm-4.cpp  glm-attention.cpp  glm-benchmark.cpp  glm-launcher.cpp  glm-layer-norm.cpp  glm-quantize.cpp  glm-rope.cpp  glm-tokenizer.cpp  intellect-3.cpp  intellect-router.cpp  intellect-worker.cpp  moe-manager.cpp
src/gpu/: cuda-attention.cu  cuda-moe.cu  glm-gpu-kernels.cu
